made a UI to check every Buyers stats